changes/3.15/00fd9619120db1d6a19be2f9e3df6f76234b311b
of: Fix of_graph_parse_endpoint stub for !CONFIG_OF builds

This patch fixes the following build error:

   In file included from drivers/media/i2c/adv7343.c:29:0:
>> include/linux/of_graph.h:41:1: error: expected identifier or '(' before '{' token
    {
    ^
   include/linux/of_graph.h:39:19: warning: 'of_graph_parse_endpoint' declared 'static' but never defined [-Wunused-function]
    static inline int of_graph_parse_endpoint(const struct device_node *node,
                      ^

vim +41 include/linux/of_graph.h

    35                                          const struct device_node *node);
    36  struct device_node *of_graph_get_remote_port(const struct device_node *node);
    37  #else
    38
    39  static inline int of_graph_parse_endpoint(const struct device_node *node,
    40                                          struct of_endpoint *endpoint);
  > 41  {
    42          return -ENOSYS;
    43  }
    44

Reported-by: kbuild test robot <fengguang.wu@intel.com>
Signed-off-by: Philipp Zabel <p.zabel@pengutronix.de>

